# Delegacion-Selector-Progra-ll

./: CMakeLists.txt  README.md
Delegacion Selector/: Delegacion Selector.sln
Delegacion Selector/Delegacion Selector/: Contenedor.h  Delegacion Selector.vcxproj  Delegacion Selector.vcxproj.filters  Persona.h  SEdades.h  SEstatura.h  SIndiceMasaCorporal.h  SLugar.h  SPeso.h  Selector.h  main.cpp
Delegacion Selector/Delegacion Selector/x64/Debug/: Delegacion Selector.exe.recipe  Delegacion Selector.ilk  vc143.idb
Delegacion Selector/Delegacion Selector/x64/Debug/Delegaci.3e586aed.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Delegacion Selector.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
